
set(SOURCES 
    ssg.cxx
    ssgAnimation.cxx
    ssgBase.cxx
    ssgBaseTransform.cxx
    ssgBranch.cxx
    ssgContext.cxx
    ssgCutout.cxx
    ssgDList.cxx
    ssgEntity.cxx
    ssgIsect.cxx
    ssgLeaf.cxx
    ssgList.cxx
    ssgLoadDOF.cxx
    ssgLoadAC.cxx
    ssgOptimiser.cxx
    ssgRoot.cxx
    ssgSaveAC.cxx
    ssgSelector.cxx
    ssgSimpleState.cxx
    ssgState.cxx
    ssgStateTables.cxx
    ssgStats.cxx
    ssgTween.cxx
    ssgTweenController.cxx
    ssgTexTrans.cxx
    ssgTexture.cxx
    ssgTransform.cxx
    ssgStateSelector.cxx
    ssgRangeSelector.cxx
    ssgLoadTexture.cxx
    ssgLoadBMP.cxx
    ssgLoadSGI.cxx
    ssgLoadPNG.cxx
    ssgLoadTGA.cxx
    ssgLoadPCX.cxx
    ssgInvisible.cxx
    ssgLoadSSG.cxx
    ssgVTable.cxx
    ssgSimpleList.cxx
    ssgVtxTable.cxx
    ssgIO.cxx
    ssgLoad3ds.cxx
    ssgSaveASE.cxx
    ssgLoadASE.cxx
    ssgParser.cxx
    ssgLoadDXF.cxx
    ssgSaveDXF.cxx
    ssgLoadTRI.cxx
    ssgSaveTRI.cxx
    ssgLoadOBJ.cxx
    ssgSaveOBJ.cxx
    ssgVtxArray.cxx
    ssgLoadMD2.cxx
    ssgLoadMDL.cxx
    ssgLoadX.cxx
    ssgSaveX.cxx
    ssgLoaderWriterStuff.cxx
    ssgLoadFLT.cxx
    ssgLoadM.cxx
    ssgSaveM.cxx
    ssgLoadStrip.cxx
    ssgLoadOFF.cxx
    ssgSaveOFF.cxx
    ssgSaveQHI.cxx
    ssgLoadVRML1.cxx
    ssgSaveVRML1.cxx
    ssgSave3ds.cxx
    ssgAxisTransform.cxx
    ssgLoadATG.cxx
    ssgSaveFLT.cxx
    ssgSaveATG.cxx
    ssgLoadIV.cxx
    ssgLoad.cxx
    ssgLoadMDL_BGLTexture.cxx
    ssgLoadXPlaneObj.cxx
    ssgLoadASC.cxx
    ssgSaveASC.cxx
    ssgSaveIV.cxx
    ssgAnimTransform.cxx
    ssgVertSplitter.cxx
    ssgStatistics.cxx
    )

set(HEADERS
    ssg.h
    ssgconf.h
    ssgMSFSPalette.h
    ssgKeyFlier.h
    pcx.h
    )

add_library(plibssg STATIC ${SOURCES})

install(TARGETS plibssg ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(FILES ${HEADERS} DESTINATION include/plib/)
